--- a/frontend/src/styles/Toolbar.scss
+++ b/frontend/src/styles/Toolbar.scss
@@ -1,18 +1,20 @@
 .toolbar {
   width: 240px;
-  height: 100vh;
+  height: 100%;
   background-color: #F8FBFF;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  position: fixed;
   overflow-y: auto;
   overflow-x: hidden;
+  padding-top: 15px;
+  box-sizing: border-box;
 }
 
 @media (max-width: 768px) {
   .toolbar {
-    width: 260px;
+    width: 100%;
+    padding-top: 70px;
   }
 
   .toolbar-items a {
